--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,9 @@
     <div>
         <h1><%= blog.title %> </h1>
         <img src="<%= blog.image %> ">
-        <p><%= blog.body %> </p>
+        <p><%= blog.body.substring(0, 50) %>....... </p>
         <span><%= blog.created %> </span>
+        <a href="/blogs/<%= blog._id %> ">Read more</a>
     </div> 
 <% }) %> 
 
