--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,39 @@
 <%- include('./partials/header') %> 
 
-<% blogs.forEach(function(blog){ %>
-    <div>
-        <h1><%= blog.title %> </h1>
-        <img src="<%= blog.image %> ">
-        <p><%= blog.body.substring(0, 50) %>....... </p>
-        <span><%= blog.created %> </span>
-        <a href="/blogs/<%= blog._id %> ">Read more</a>
-    </div> 
-<% }) %> 
+<div class="ui main text container">
+    <div class="ui huge container">PIED PIPER BLOG</div>
+    <div class="ui top attached segment">
+        <div class="ui divided items">
+            <% blogs.forEach(function(blog){ %>
+                <div class="item">
+                    <div class="image">
+                        <img src="<%= blog.image %> ">
+                    </div>
+                    <div class="content">
+                        <a class="header" href=/blogs/<%= blog._id %> ><%= blog.title %> </a>
+                        <div class="meta">
+                            <span><%= blog.created.toDateString() %> </span>
+                        </div>
+                        <div class="description">
+                            <p><%- blog.body.substring(0, 50) %>....... </p>
+                        </div>
+                        <div class="extra">
+                            <a class="ui floated basic black button" href=/blogs/<%= blog._id %> >
+                                Read more
+                                <i class="arrow right icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                    
+                    
+                    
+                    
+                </div> 
+            <% }) %>
+        </div>
+    </div>
+</div>
+
+ 
 
 <%- include('./partials/footer') %> 
