fixed navbar issue

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,13 @@
 </head>
 <body>
     
-    <div class="ui fixed inverted menu">
+    <div class="ui inverted fixed menu">
         <div class="ui container">
             <div class="header item"><i class="pied piper pp icon"></i> Blog</div>
                 <a href="/"class="item">Home</a>
                 <a href="/blogs/new"class="item">New Post</a>
         </div>
         
-    </div>
+    </div> 
 
 
